--- a/contato.html
+++ b/contato.html
@@ -1,70 +1,44 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title> Decolar - contato </title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="icon" href="img/favicon.png.png">
-    </head>
+<head>
+    <title> EL TAMBO - CONTATO </title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/stylo.css">
+    <link rel="icon" href="img/06.jpg">
+</head>
 
-    <body>
-        <table border="1">
+<body>
+    <table border="1">
+        <tr>
+            <td id="header_box" colspan="2">
+            <li>
+            <a href="index.html" > Home </a>
+             </li>
+              <img src="img/0909.webp"> 
+             </td>
+        </tr>
 
-            <tr>
-                <td id="header_box" colspan="2">
-                    <img src="img/2.jfif">
-                </td>
-            </tr>
+        <tr>
+            <td id="nav_box" colspan="2">
+        </tr>
 
-            <tr>
-                <td id="nav_box" colspan="2">
-                    <ul>
-                        <li>
-                            <a href="index.html" > Home </a>
-                        </li>
+        <tr>
+            <td colspan="2">
+            <img src="img/44.jpg">
+            </td>
+        </tr>
 
-                        <li>
-                            <a href="Contato.html" class="active"> Contato </a>
-                        </li>
+        <tr>
+        <td class="article_box">
+            <h2> Contato </h2>
+             
+            <h4>Alguns dizem que eles são recheados demais, outros dizem que não são como os tacos que comeram fora, não são mesmo!
+                Nossa tortilha é macia e artesanal, nossa carne é grelhada na chapa e não temos miséria com os molhos, afinal, todo cabe em uma tortilla!</h4>
+                  
+            <h3>Email- eltambo@gmail.com.br </h3>
+            <h3>Telefone: 32 99934-2122</h3>
 
-                        <li>
-                            <a href="quem_somos.html"> Quem somos </a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-
-            <tr>
-                <td colspan="2">
-                    <img src="img/3pnj.png">
-                </td>
-            </tr>
-
-            <tr>
-                <td class="article_box">
-                    <h2> Contato </h2>
-
-                    <p>orem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem 
-                        sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e
-                         os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, 
-                         como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou </p>
-
-                         <p>orem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem 
-                            sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e
-                             os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, 
-                             como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou </p>     
-
-                             <h3>Email- Decolar@gmail.com.br </h3>
-                             <h3>Telefone: 32 99934-2122</h3>
-                </td>
-            </tr>
-
-            <tr>
-                <td id="footer_box" colspan="2">
-                    Decolar  - 2022
-                </td>
-            </tr>
-
-        </table>
-    </body>
+        </td>
+    </table>
+</body>
